--- a/public/assets/css/champlainsmilesolutions.css
+++ b/public/assets/css/champlainsmilesolutions.css
@@ -302,6 +302,15 @@ blockquote {
         border-color: #ffffff;
     }
 
+/*for benefits*/
+h1 > span:not(.nocolor), h2 > span:not(.nocolor), h3 > span:not(.nocolor), h4 > span:not(.nocolor), h5 > span:not(.nocolor), h6 > span:not(.nocolor) {
+    color: #0164a5 !important;
+}
+
+.feature-box p {
+    color: #222222 !important;
+}
+
 
 #offer {
     padding-top: 40px;
