--- a/public/assets/css/champlainsmilesolutions.css
+++ b/public/assets/css/champlainsmilesolutions.css
@@ -2,7 +2,7 @@ body {
     color: #222222;
     font-family: 'Gentium Book Basic', serif;
     font-size: 16px;
-    line-height: 1.3;
+    line-height: 1.6;
 }
 
 h1,
@@ -193,71 +193,37 @@ header #logo img {
 }
 
 
-#top-bar {
-    background-color: #f0f0f0;
-    box-shadow: inset 0 -10px 10px -10px rgba(0, 0, 0, .2);
-    font-family: 'Open Sans', sans-serif;
-}
-
-#top-bar .call-today {
-    font-size: 22px;
-    color: #000 !important;
-}
-
-#top-bar .call-today a {
-    color: #000 !important;
-}
-
-#top-bar .call-today a:hover {
-    color: #000 !important;
-}
-
-#top-bar a.button,
-#top-bar button {
-    border-color: #ff6400 !important;
-    background-color: #ff6400 !important;
-    color: #ffffff !important;
-    border-radius: 0px !important;
-}
-
-#top-bar a.button:hover,
-#top-bar button:hover {
-    background-color: #333333 !important;
-    color: #fff !important;
-    border-color: #ffffff;
-    border-radius: 0px !important;
-}
-
-
-
-#slider {
-
-}
 
 #slider img {
     padding: 10px;
-    width: 48%;
+    width: 52%;
     right: 3%;
 }
 
+
 .device-md #slider img {
-    width: 45%;
+    width: 65%;
+    right: 10%;
+}
+
+.device-md #slider img {
+    width: 55%;
     right: 5%;
 }
 
 .device-sm #slider img {
-    width: 40%;
+    width: 51%;
     right: 5%;
 }
 
 #quote {
-    background-color: #f0f0f0;
-    color: #222222 !important;
+    background-color: #0164a5;
+    color: #ffffff !important;
     padding-top: 25px;
 }
 
 blockquote {
-    border-left: 5px solid #0164a5;
+    border-left: 5px solid #ff6400;
 }
 
 
@@ -315,17 +281,18 @@ h1 > span:not(.nocolor), h2 > span:not(.nocolor), h3 > span:not(.nocolor), h4 > 
 #offer {
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #ff6400;
+    background-color: #ffffff;
 }
 
 #offer .call-today {
     display: inline-block;
     font-size: 38px;
     line-height: 40px;
+    color: #222222 !important;
 }
 
 #offer .call-today a {
-    color: #fff !important;
+    color: #ff6400 !important;
 }
 
 .button.button-rounded {
@@ -333,34 +300,35 @@ h1 > span:not(.nocolor), h2 > span:not(.nocolor), h3 > span:not(.nocolor), h4 > 
 }
 
 #offer .button {
-    border: 2px solid #ffffff;
-    background-color: #0164a5 !important;
+    border: 2px solid #ff6400;
+    background-color: #ff6400 !important;
     color: #ffffff !important;
     border-radius: 0px;  
 }
 
 #offer a.button:hover,
 #offer button:hover {
-    color: #0164a5 !important;
-    background-color: #ffffff !important;
+    color: #fff !important;
+    background-color: #0164a5 !important;
     border: 2px solid #0164a5;
 }
 
 #offer h2 {
-    color: #fff !important;
+    color: #222222 !important;
     text-transform: uppercase;
     margin-bottom: 10px;
     line-height: 1.1;
 }
 
 #offer h2 span {
-    color: #fff !important;
+    color: #222222 !important;
     text-transform: uppercase;
 }
 
 #offer h4 {
-    color: #fff !important;
+    color: #222222 !important;
 }
+
 
 
 .device-xxs #offer h2, .device-xs #offer h2 {
@@ -393,8 +361,9 @@ h1 > span:not(.nocolor), h2 > span:not(.nocolor), h3 > span:not(.nocolor), h4 > 
 }
 
 #offer h2 span {
-    color: #fff !important;
+    color: #222222 !important;
 }
+
 
 .device-xxs #offer h2 span,
 .device-xs #offer h2 span {
@@ -416,35 +385,23 @@ hr {
     border-top: 1px solid #0079c1;
 }
 
-#tour {
-
-}
-
-    #tour .oc-item {
-        padding: 5px;
-        border: 1px solid rgba(0,0,0,0.075);
-        box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-        background-color: #F3F3F3;
-        border-radius: 3px;
-    }
-
-#forms {
-    background-color: #f0f0f0;
-}
-
-    #forms a.button {
-        color: #0164a5 !important;
-        background-color: #ffffff;
-        border: 2px solid #0164a5 !important;
-    }
-
-    #forms a.button:hover {
-        background-color: #0164a5;
-        color: #ffffff !important;
-    }
 
 #location {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+}
 
+@media (max-width: 992px) {
+    #contact-form-overlay, #contact-form-overlay-mini {
+         box-shadow: none !important; 
+         background-color: inherit !important;
+    }
+}
+
+@media (max-width: 992px) {
+.map{
+    height: 200px !important;
+    }
 }
 
     #location #map-overlay {
@@ -500,7 +457,7 @@ hr {
         }
 
 #footer {
-    background-color: #febf3e;
+    background-color: #fff;
     color: #0164a5;
 }
     
@@ -517,12 +474,12 @@ hr {
 
     #copyrights {
         background-color: #0164a5;
-        color: #b9e3ff;
+        color: #fff;
     }
 
         #copyrights p,
         #copyrights p a {
-            color: inherit;
+            color: #fff;
         }
 
 .button {
