--- a/public/assets/css/champlainsmilesolutions.css
+++ b/public/assets/css/champlainsmilesolutions.css
@@ -222,6 +222,12 @@ header #logo img {
     padding-top: 25px;
 }
 
+#mobile-quote {
+    background-color: #0164a5;
+    color: #ffffff !important;
+    padding-top: 25px;
+}
+
 blockquote {
     border-left: 5px solid #ff6400;
 }
@@ -391,8 +397,24 @@ hr {
     padding-bottom: 0px !important;
 }
 
+#contact-form-overlay-mini-mobile {
+    position: relative;
+    max-width: 500px;
+    background-color: #FFF;
+    text-align: center;
+    padding: 15px;
+    margin: 0 auto;
+    z-index: 10;
+    border-radius: 4px;
+}
+
+
 @media (max-width: 992px) {
     #contact-form-overlay, #contact-form-overlay-mini {
+         box-shadow: none !important; 
+         background-color: inherit !important;
+    }
+        #contact-form-overlay, #contact-form-overlay-mini-mobile {
          box-shadow: none !important; 
          background-color: inherit !important;
     }
@@ -455,6 +477,10 @@ hr {
             color: inherit;
             font-weight: bold;
         }
+
+#gotoTop:hover{
+    background-color: #ff6400;
+}
 
 #footer {
     background-color: #fff;
